--- a/css/main.css
+++ b/css/main.css
@@ -43,7 +43,7 @@ a:visited {
 .movie-list__table td{
     font-size: 22px;
     font-weight: 400;
-    padding: 18px 0;
+    padding: 25px 0 11px 0;
     vertical-align: top;
 }  
 .container tr:nth-child(2n+1){
