--- a/css/main.css
+++ b/css/main.css
@@ -260,7 +260,7 @@ a:visited {
     margin: auto;
     overflow: hidden;
     color: #fff;
-    min-height: 100vh;
+    /*min-height: 100vh;*/
 }
 .block-01:after {
     content: '';
@@ -428,7 +428,7 @@ a:visited {
     border-collapse: collapse;
     border-radius: 0.75rem;
     overflow: hidden;
-    height: 80vh;
+    /*height: 80vh;*/
 }
 .block-03__table th{
     font-size: 1.3rem;
@@ -493,7 +493,7 @@ a:visited {
     margin: auto;
 }
 .block-03 svg{
-    width: 2vw;
+    width: 2rem;
 }
 
 /*ПОДАРОК*/
@@ -558,7 +558,7 @@ a:visited {
 .block-04 a{
     border-radius: 0.75rem;
     background-color: rgb(144, 210, 61);
-    border: 2px solid rgb(144, 210, 61);;
+    border: 0.1rem solid rgb(144, 210, 61);;
     padding: 0.75rem 1.5rem;
     margin-right: 8.3rem;
     color: #fff;
@@ -678,7 +678,7 @@ a:visited {
     padding-right: 0.05rem;
 }
 .block-05 svg{
-    width: 1.7vw;
+    width: 1.7rem;
 }
 /* .block-05__empty{
     grid-row: 2 / 3;
@@ -714,6 +714,6 @@ a:visited {
     padding-bottom: 2rem;
 }
 .block-06 svg{
-    width: 2.5vw;
+    width: 2.5rem;
 }
 
