--- a/css/media.css
+++ b/css/media.css
@@ -31,9 +31,6 @@
     .block-01 header ul li {
         padding-right: 1rem;
     }
-    .block-01 header ul li:nth-child(5) {
-        padding-left: 2.5rem;
-    }
     .block-02 {
         width: 50rem;
     }
@@ -121,14 +118,7 @@
         margin-bottom: 1rem;
         text-align: right;
     }
-    .block-01 header ul li:nth-child(5){
-        padding-right: inherit;
-        padding-left: inherit;
-        margin-bottom: 0.2rem;
-        margin-top: 2rem;
-        display: none;
-    }
-    .block-01 header ul li:nth-child(6){
+    .block-01__your_city{
         display: none;
     }
     .block-02{
