--- a/css/main.css
+++ b/css/main.css
@@ -175,7 +175,7 @@ select {
     width: 100%;
     outline: 0;
     transition: .2s;
-    margin-bottom: 1rem;
+    margin-bottom: 0.5rem;
 }
 
 select {
@@ -856,7 +856,7 @@ a:visited {
     top: 0;
     left: 0;
     z-index: 1000;
-    padding-top: 10rem;
+    padding-top: 5rem;
 }
 
 #block-08__booking-window {
@@ -876,13 +876,14 @@ a:visited {
 }
 
 #block-08__film-value,
+#block-08__chosen_place,
 #block-08__client-phone,
 #block-08__client-name,
 #block-08__film-start {
     width: 23.8rem;
 }
 
-.block-price {
+.block-08__price {
     margin-bottom: 1rem;
 }
 
@@ -893,4 +894,22 @@ a:visited {
 
 #block-08__client-phone:focus {
     outline: none;
+}
+.block-08__places{
+    display: flex;
+    margin: 1rem;
+}
+.block-08__place_div{
+    margin: 0 auto;
+    border: 0.1rem solid black;
+    border-radius: 0.2rem;
+    height: 2rem;
+    width: 2rem;
+    text-align: center;
+}
+.block-08__place_free{
+    background: #a3cc40;
+}
+.block-08__place_booked{
+    background: #ffa500;
 }
